# aisearch-openai-rag-audio-communication-services

./: .gitignore  AzureCommunicationServices.md  azure.yaml  pyproject.toml
app/backend/: acsClient.py  app.py  requirements.txt  rtmt.py  rtmtForAcs.py
callautomation-azure-openai-voice/: .dockerignore  Dockerfile  azureOpenAIService.py  main.py  pyproject.toml  readme.md  requirements.txt  tools.py
callautomation-azure-openai-voice/aoai-whl/: About.md
infra/: main.bicep  main.parameters.json
infra/core/communication/: services.bicep  test.bicep
infra/core/security/: aca-identity.bicep
scripts/: write_env.ps1  write_env.sh
